--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Melkin Mosquera <melanmosta@gmail.com>
+Tatiana Orejuela Zapata <tatianaorezap@gmail.com>
